
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;
typedef scalar_t__ u32 ;
typedef scalar_t__ u16 ;
struct pci_epc {int dummy; } ;
struct dw_pcie_ep {scalar_t__ msix_cap; } ;
struct dw_pcie {int dummy; } ;


 int EINVAL ;
 scalar_t__ PCI_MSIX_FLAGS ;
 scalar_t__ PCI_MSIX_FLAGS_QSIZE ;
 int dw_pcie_dbi_ro_wr_dis (struct dw_pcie*) ;
 int dw_pcie_dbi_ro_wr_en (struct dw_pcie*) ;
 scalar_t__ dw_pcie_readw_dbi (struct dw_pcie*,scalar_t__) ;
 int dw_pcie_writew_dbi (struct dw_pcie*,scalar_t__,scalar_t__) ;
 struct dw_pcie_ep* epc_get_drvdata (struct pci_epc*) ;
 struct dw_pcie* to_dw_pcie_from_ep (struct dw_pcie_ep*) ;

__attribute__((used)) static int dw_pcie_ep_set_msix(struct pci_epc *epc, u8 func_no, u16 interrupts)
{
 struct dw_pcie_ep *ep = epc_get_drvdata(epc);
 struct dw_pcie *pci = to_dw_pcie_from_ep(ep);
 u32 val, reg;

 if (!ep->msix_cap)
  return -EINVAL;

 reg = ep->msix_cap + PCI_MSIX_FLAGS;
 val = dw_pcie_readw_dbi(pci, reg);
 val &= ~PCI_MSIX_FLAGS_QSIZE;
 val |= interrupts;
 dw_pcie_dbi_ro_wr_en(pci);
 dw_pcie_writew_dbi(pci, reg, val);
 dw_pcie_dbi_ro_wr_dis(pci);

 return 0;
}
